gitops-manifest.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: gitops
