kyverno-policy.yaml

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  rules:
  - name: check-root-user
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Running as root user is not allowed."
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
